# llm-orchestration-demo

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  COPILOT.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pixi.toml  pyproject.toml
docs/: api_specs.md
examples/: basic_call.py  fallback_patterns.py  parallel_calls.py  streaming.py  test_client.py
src/api/: errors.py  health.py  main.py  middleware.py  models.py  routes.py  state.py
src/llm/: clients.py  orchestrator.py  utils.py
src/utils/: config.py  logger.py  redis.py
tests/: conftest.py  test_api.py  test_coverage_completeness.py  test_errors_and_middleware_units.py  test_llm.py  test_main_handlers.py  test_middleware.py
